client/src/pages/profile/profile.styles.css
.profile-page-container{
    padding: 5vh 0;
    min-height: 80vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.profile-page{
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 80px;
}

.profile-page.hide-schedule{
    display: flex;
    flex-direction: column;
    gap: 50px;
    align-items: center;
}

.profile-info{
    display: flex;
    align-items: center;
    justify-content: center;
}

.profile-info .profile-header{
    display: flex;
    flex-direction: column;
    justify-content: center;

    font-size: 1.5em;
}

.profile-info img{
    border-radius: 50%;
    border: black 5px solid;
    width: 150px;
    height: 150px;
    margin-right: 30px;
}

.bio-container{
    margin-top: 30px;
    width: 500px;
    font-size: 16px;
    line-height: 1.5;
}

.bio-container strong{
    font-size: 1.3em;
    letter-spacing: 1px;
}

.profile-schedule-container{
    width: 90%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.profile-schedule-container h2{
    text-decoration: underline;
}

#bio{
    margin-top: 2vh;
    white-space: pre-wrap;
}

@media screen and (max-width: 400px) {
    .profile-page{
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 50px;
        font-size: 0.8em;
    }

    .profile-info{
        font-size: 0.7em;
    }

    .profile-info img{
        width: 100px;
        height: 100px;
    }
}
/* .profile-page-container{
    padding: 5vh 0;
    min-height: 80vh;
    display: flex;
    align-items: center;
}

.profile-page{
    width: 100%;
    height: 80vh;
    display: grid;
    grid-template-columns: 3fr 2fr;
    gap: 20px;
}

.profile-page.hide-schedule{
    display: flex;
    flex-direction: column;
    gap: 50px;
    align-items: center;
}

.profile-info{
    display: flex;
    align-items: center;
    justify-content: center;
}

.profile-info .profile-header{
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 1.5em;
}

.profile-info img{
    border-radius: 50%;
    border: black 5px solid;
    width: 150px;
    height: 150px;
    margin-right: 30px;
}

.bio-container{
    margin-top: 30px;
    width: 500px;
    font-size: 16px;
    line-height: 1.5;
}

.bio-container strong{
    font-size: 1.3em;
    letter-spacing: 1px;
}

.profile-schedule-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.profile-schedule-container h2{
    text-decoration: underline;
}

#bio{
    margin-top: 2vh;
    white-space: pre-wrap;
}

@media screen and (max-width: 400px) {
    .profile-page{
        display: flex;
        flex-direction: column;
        font-size: 0.8em;
    }

    .profile-info{
        font-size: 0.7em;
    }

    .profile-info img{
        width: 100px;
        height: 100px;
    }
} */

